# ai-code-review-multi-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  api_server.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_adk_web.py  test_adk_tools.py  utils.py
agent_workspace/orchestrator_agent/: agent.py
code_review_orchestrator/: __init__.py  agent.py
code_review_orchestrator/sub_agents/: __init__.py
config/: app.yaml  language_config.yaml  prometheus.yml
config/adk/: agent.yaml  llm_config.yaml  memory_config.yaml  session_service.yaml  tools.yaml  workflow_config.yaml
config/agdk/: runtime.yaml
config/agents/: agent_registry.yaml  api_design.yaml  architecture.yaml  base_agent.yaml  cloud_native.yaml  code_analyzer.yaml  code_quality.yaml  engineering_practices.yaml  microservices.yaml  performance.yaml  security_standards.yaml  specialized_agents.yaml  sustainability.yaml
config/api/: application.yaml
config/environments/: development.yaml  production.yaml  staging.yaml
config/gadk/: runtime.yaml
config/guardrails/: bias_prevention.yaml  hallucination_prevention.yaml
config/integrations/: adk.yaml  neo4j.yaml  redis.yaml
config/llm/: cost_optimization.yaml  models.yaml  output_validation.yaml  providers.yaml  system_prompts.yaml  system_protection.yaml
config/observability/: monitoring.yaml
config/orchestrator/: agent_capabilities.yaml  smart_orchestrator.yaml
config/reporting/: formats.yaml  templates.yaml
config/rules/: bias_prevention.yaml  custom_rules.yaml  quality_gates.yaml  security_analysis.yaml
config/tools/: complexity_analyzer.yaml  languages.yaml  llm_integration.yaml
config/tree_sitter/: README.md  languages.yaml  patterns.yaml
credentials/: README.md
data/: mock_session_data.json
docs/: ADK_RUNNER_FEATURES.md  ADK_SESSION_MANAGEMENT_UPGRADE.md  CODE_QUALITY_COMPLEXITY_STANDARDS.md  CODE_QUALITY_CONFIG_CONSOLIDATION.md  IMPLEMENTATION_PLAN.md  INTELLIGENT_ORCHESTRATOR_DESIGN.md  MODELSERVICE_INTEGRATION_COMPLETE.md  MODEL_DESIGN.md  MODEL_PARAMETERS_GUIDE.md  MULTI_AGENT_SESSION_API_IMPROVEMENT_PLAN.md  MULTI_AGENT_STATE_MANAGEMENT_DESIGN.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_QUICKSTART.md  PHASED_IMPLEMENTATION_PLAN.md  PHASE_0_ACTION_PLAN.md  PHASE_0_COMPLETION_REPORT.md  PHASE_2_ENHANCED_ORCHESTRATOR_DESIGN.md  PHASE_2_SCALING_PLAN.md  RATE_LIMIT_FIX_SUMMARY.md  README.md  README_GEMINI_CONFIG.md  REDIS_INTEGRATION_COMPATIBILITY_REPORT.md  SESSION_MANAGEMENT.md  SESSION_MANAGEMENT_REVIEW_SUMMARY.md  TEMPERATURE_COMPARISON_RESULTS.md  UNIVERSAL_LLM_WRAPPER.md  comprehensive_milestone_plan.md  google_adk_milestone_plan.md  google_agdk_implementation_plan.md  google_agdk_modular_implementation_plan.md  google_agdk_spec_design_doc.md  google_cloud_setup.md  google_cloud_setup_guide.md  milestone_0_2_completion_summary.md  rate_limiting.md  tools_first_architecture_analysis.md
docs/agents/: README.md
docs/api/: adk_api_reference.md
docs/architecture/: ADK_MULTI_AGENT_CODE_REVIEW_SYSTEM_DESIGN.md  ADK_MULTI_AGENT_SYSTEM_DESIGN copy.md  ADK_MULTI_AGENT_SYSTEM_DESIGN.md  ADK_MULTI_AGENT_SYSTEM_ORCHESTRATION_LAYER_DESIGN.md  ADK_MVP_CODE_REVIEW_SYSTEM_DESIGN.md  ADK_MVP_ORCHESTRATION_LAYER_DESIGN.md  QUALITY_CONTROL_ARCHITECTURE.md  README.md  SECURITY_AND_QUALITY_ARCHITECTURE.md  complexity_analyzer_workflow_position.md
docs/deployment/: SCAFFOLDING_COMPLETION_SUMMARY.md  SCAFFOLDING_SUCCESS_SUMMARY.md  google-cloud-project-setup.md  google_cloud_setup.md
docs/implementation_plan/: MVP_IMPLEMENTATION_PLAN.md
docs/reports/: dynamic_analysis_report_20251009_132453.md  dynamic_analysis_report_20251009_142514.md
infra/: Dockerfile.adk  docker-compose.adk.yml
infra/config/: google-cloud-setup.yaml  prometheus.yml  redis.conf
infra/credentials/: .gitkeep  README.md
infra/scripts/: adk-dev-portal.py  create-google-cloud-project.sh  quick-gcp-setup.sh  remove-credentials-from-history.sh  scaffold-fresh-codebase.py  setup-fresh-environment.sh  start-adk-dev.sh
scripts/: analyze_traces.py  dev-setup.sh  init-db.sql  revoke-compromised-credentials.sh  setup-google-cloud.sh  setup_google_cloud.sh  start-adk-dev.sh  start-agdk-dev.sh  start-gadk-dev.sh  test-infrastructure.sh  verify_google_cloud.py
services/: __init__.py  model_service.py  session.py
src/: __init__.py
src/agents/: __init__.py  adk_agents.py  base_agent.py  constants.py  exceptions.py  types.py
src/api/: constants.py  exceptions.py  main.py  middleware.py  types.py
src/common/: __init__.py  exceptions.py  types.py  utils.py
src/config/: __init__.py  constants.py  loader.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  types.py
src/integrations/: __init__.py
src/llm/: constants.py  exceptions.py  types.py
src/memory/: __init__.py
src/models/: __init__.py  agent_models.py  analysis_models.py  report_models.py  session_models.py  tool_models.py  workflow_models.py
src/outputs/: README.md
src/services/: memory_service.py  model_service.py  session_service.py
src/tools/: __init__.py  complexity_analyzer_tool.py  static_analyzer_tool.py
src/utils/: adk_helpers.py  common.py  config_loader.py  config_settings.py  constants.py  exceptions.py  (+6 more)
tests/: conftest.py  demo_google_adk_agent.py  test-adk-integration.py  test_adk_code_analyzer.py  test_baseagent_agdk_integration.py  test_code_analyzer_comprehensive.py  test_code_analyzer_direct.py  test_config_loading.py  test_direct_code_analyzer.py  test_dynamic_enhanced_report.py  test_enhanced_report_generation.py  test_maintainability_scorer.py  test_maintainability_tools.py  test_merged_base_agent.py  test_simple_code_analyzer.py  verify_google_cloud.py
tools/: carbon_footprint_analyzer.py  complexity_analyzer_tool.py  engineering_practices_evaluator.py  security_vulnerability_scanner.py  static_analyzer_tool.py  tree_sitter_tool.py
util/: artifact_service.py  callbacks_guardrails.py  code_optimizer.py  llm_model.py  llm_wrapper.py  rate_limiter.py  result_cache.py  service_registry.py  session.py  system_prompts.py
(+246 files in other folders)
